<resources>
    <string name="app_name">MyMagazine</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="first_name"><font size="14">First name</font></string>
    <string name="second_name"><font size="14">Second name</font></string>
    <string name="second_name_normal">Second name</string>
    <string name="password"><font size="14">Password</font></string>
    <string name="email"><font size="14">Email</font></string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="your_name">Your name</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="shop">Shop</string>
    <string name="chat">Chat</string>
    <string name="_1539">$1539</string>
    <string name="trade_by">Trade by</string>
    <string name="bata">bata</string>
    <string name="location">Location</string>
    <string name="what_are_you_looking_for"><font size="12">What are you looking for ?</font></string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="latest">Latest</string>
    <string name="samsung">Samsung</string>
    <string name="_180_000">180,000</string>
    <string name="dollar">$</string>
    <string name="flash_sale">Flash sale</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="off">% off</string>
    <string name="off_text"> % off</string>
    <string name="_30">30</string>
    <string name="new_balance_sneakers">New balance \nSneakers</string>
    <string name="_22_50">$ 22,50</string>
    <string name="description_text">Features waterproof, fire, air resistant shoes. all \nchanged when the country of fire attacked</string>
    <string name="_3_9">3.9</string>
    <string name="_4000_reviews">(4000 reviews)</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity:</string>
    <string name="_2_500">#2,500</string>
    <string name="fill_correct">Заполните корректно</string>
    <string name="enter_correct_name">Пользователя с таким именем нет</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_password">Введите пароль</string>
    <string name="view_all">View all</string>
</resources>