<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ic_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/ic_balans"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favourite" />

        <item
            android:id="@+id/ic_shops"
            android:icon="@drawable/ic_shop"
            android:title="@string/shop" />

        <item
            android:id="@+id/ic_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />

        <item
            android:id="@+id/ic_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>

</menu>