<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/menu_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="54dp"
        android:src="@drawable/menu_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/trade_by"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/menu_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/menu_img" />

    <TextView
        android:id="@+id/bata_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/bata"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/header_text"
        app:layout_constraintStart_toEndOf="@id/header_text"
        app:layout_constraintTop_toTopOf="@+id/header_text" />

    <ImageView
        android:id="@+id/account_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="45dp"
        android:src="@drawable/profile_img"
        app:layout_constraintBottom_toBottomOf="@id/header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/header_text" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:text="@string/location"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_img" />

    <ImageView
        android:layout_width="8dp"
        android:layout_height="5dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/vector_down"
        app:layout_constraintBottom_toBottomOf="@id/text_location"
        app:layout_constraintStart_toEndOf="@id/text_location"
        app:layout_constraintTop_toTopOf="@id/text_location" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/et_style"
        android:gravity="center"
        android:hint="@string/what_are_you_looking_for"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search_img"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="88dp"
        android:src="@drawable/search_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_phones"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/phones_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phones"
        android:textColor="@color/gray_border"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/img_phones"
        app:layout_constraintStart_toStartOf="@+id/img_phones"
        app:layout_constraintTop_toBottomOf="@id/img_phones" />

    <ImageView
        android:id="@+id/img_headphones"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/headphones_img"
        app:layout_constraintStart_toEndOf="@id/img_phones"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headphones"
        android:textColor="@color/gray_border"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/img_headphones"
        app:layout_constraintStart_toStartOf="@+id/img_headphones"
        app:layout_constraintTop_toBottomOf="@id/img_headphones" />

    <ImageView
        android:id="@+id/img_games"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/games_img"
        app:layout_constraintStart_toEndOf="@id/img_headphones"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headphones"
        android:textColor="@color/gray_border"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/img_games"
        app:layout_constraintStart_toStartOf="@+id/img_games"
        app:layout_constraintTop_toBottomOf="@id/img_games" />

    <ImageView
        android:id="@+id/img_cars"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/cars_img"
        app:layout_constraintStart_toEndOf="@id/img_games"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games"
        android:textColor="@color/gray_border"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/img_cars"
        app:layout_constraintStart_toStartOf="@+id/img_cars"
        app:layout_constraintTop_toBottomOf="@id/img_cars" />

    <ImageView
        android:id="@+id/img_furniture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/furnitures_img"
        app:layout_constraintStart_toEndOf="@id/img_cars"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/furniture"
        android:textColor="@color/gray_border"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/img_furniture"
        app:layout_constraintStart_toStartOf="@+id/img_furniture"
        app:layout_constraintTop_toBottomOf="@id/img_furniture" />

    <ImageView
        android:id="@+id/img_kids"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/kids_img"
        app:layout_constraintStart_toEndOf="@id/img_furniture"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kids"
        android:textColor="@color/gray_border"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/img_kids"
        app:layout_constraintStart_toStartOf="@+id/img_kids"
        app:layout_constraintTop_toBottomOf="@id/img_kids" />

    <TextView
        android:id="@+id/text_latest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/latest"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_phones" />

    <HorizontalScrollView
        android:id="@+id/scroll_latest"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_latest">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:orientation="horizontal">
            
        </LinearLayout>

    </HorizontalScrollView>


    <TextView
        android:id="@+id/text_flash_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="12dp"
        android:text="@string/flash_sale"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_latest" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_flash_sale">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp">

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>