<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.LoginActivity">

        <TextView
            android:id="@+id/text_welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="151dp"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_first_name_login"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/et_style"
            android:gravity="center"
            android:hint="@string/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_welcome_back" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/et_style"
            android:gravity="center"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@id/et_first_name_login"
            app:layout_constraintStart_toStartOf="@id/et_first_name_login"
            app:layout_constraintTop_toBottomOf="@id/et_first_name_login" />

        <ImageView
            android:id="@+id/visible_true"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginEnd="58dp"
            android:src="@drawable/ic_eye_enable"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="99dp"
            android:background="@drawable/btn_sign_style"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>